Added test PermGen and MaxPermGen settings